--- a/doc/base_report.tex
+++ b/doc/base_report.tex
@@ -25,7 +25,7 @@
 	são, no total, dez mil vetores que estão na ordem inversa de valores indo de
 	noventa e nove mil novecentos e noventa e nove na primeira posição até zero
 	na ultima posição.  Para a abordagem paralela do trabalho, utilizou-se uma
-	implementação híbrida utilizando as ferramentas MPI\@ e OpenMP. Para esta 
+	implementação híbrida utilizando as ferramentas MPI e OpenMP\@. Para esta 
 	abordagem temos um dos processos como mestre, que é responsável por mandar 
 	mensagens com os vetores a serem ordenados pelos nós do cluster e reorganizar
 	os vetores nas suas posições originais na estrutura. Os outros processos 
@@ -77,7 +77,7 @@
 
 	\begin{figure}[H]
 		\centering
-		\includegraphics[width=88mm]{doc/graph.png}
+		\includegraphics[width=88mm]{graph.png}
 		\caption{Gráfico gerado a partir da tabela}
 		\label{fig_graph}
 	\end{figure}
